# contextpacker

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  paper.md  pyproject.toml
src/contextpacker/: __init__.py  __main__.py  gui.py  packer.py
tests/: test_contextpacker.py
