[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextpacker"
version = "0.1.0"
description = "Pack and truncate context windows for LLM prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.scripts]
contextpacker-gui = "contextpacker.gui:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/contextpacker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
